<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splatter_bg"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.example.cldme.androidlearning.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView1"
        android:textSize="20sp"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnYes"
            android:hint="@string/btnYesHint"
            android:onClick="onYesButtonClick"
            android:id="@+id/answerYes"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNo"
            android:hint="@string/btnNoHint"
            android:onClick="onNoButtonClick"
            android:id="@+id/answerNo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/inputName"
            android:id="@+id/userName"/>

    </LinearLayout>

</LinearLayout>
